[Fix] No overflow with long word

--- a/resources/css/city.css
+++ b/resources/css/city.css
@@ -318,6 +318,7 @@
     padding:0.3em 0.2em;
     background: #f6ddcc ;
     border-radius:0.3em;
+    word-wrap:break-word;
 }
 #chat .time {
     font-size:0.7em;
